# dpm

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.yaml  main.rs
src/commands/: install_local.rs  mod.rs  sync.rs
src/install_local/: mod.rs
src/repo/: mod.rs  types.rs
src/shared/: data_store.rs  deb_control.rs  install_package.rs  mod.rs  search_paragraph.rs
