[package]
name = "dpm"
version = "0.1.0"
authors = ["trickypr <trickypr@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deb-rs = "0.1.2"
clap = { version = "2", features = ["yaml"] }
console = "0.14.0"
byte-unit = "4.0.9"
question = "0.2.2"
sudo = "0.5"
run_script = "0.6.3"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
