[package]
name = "dpm"
version = "0.1.0"
authors = ["trickypr <trickypr@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Debian related packages
deb-rs = "0.1.2"
debcontrol = "0.1.1"

# CLI packages
clap = { version = "2", features = ["yaml"] }
byte-unit = "4.0.9"
question = "0.2.2"
run_script = "0.6.3"

# Permission packages
sudo = "0.5"

# File storage
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

# Time and date
chrono = { version = "0.4", features = ["serde"] }

# Download
reqwest = { version = "0.11" }

# Async
tokio = { version = "1", features = ["full"] }

# Decompression
xz2 = { version = "0.1", features = ["tokio"] }
